# Phebos

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  GUIA.md  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
src/phebos/: __init__.py  analyst.py  config.py  dashboard.py  evaluation.py  indicators.py  intelligence.py  journal.py  keys.py  main.py  news.py  notify.py  risk.py  schemas.py  sentiment.py
src/phebos.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/phebos/brokers/: alpaca.py  base.py  binance.py
src/phebos/web/: index.html
tests/: conftest.py  test_brokers.py  test_config_analyst.py  test_dashboard.py  test_indicators.py  test_intelligence_evaluation.py  test_journal.py  test_keys.py  test_main_flow.py  test_news_sentiment.py  test_risk.py  test_runtime.py
