[project]
name = "phebos"
version = "0.1.0"
description = "Agente autônomo de trading com análise via API do Claude"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.0",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "requests>=2.32",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
